K1J-1983: Apply Spotless code formatting